--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,14 @@ edition = "2021"
 name = "smart_house"
 path = "src/smart_house.rs"
 
+[[bin]]
+name = "smart_socket_client"
+path = "src/smart_socket_client.rs"
+
+[[bin]]
+name = "smart_socket_server"
+path = "src/smart_socket_server.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
