--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,6 @@ path = "src/udp_thermometer_main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.4"
-tokio = { version = "1.12.0", features = ["full"] }
+rand = "0.8.5"
+tokio = { version = "1.34.0", features = ["full"] }
+thiserror = "1.0.50"
